✨ ImageHandlerを定義
